[TASK][CMAFT-28] Fix overflow bug

--- a/frontend/assets/css/main.scss
+++ b/frontend/assets/css/main.scss
@@ -4,16 +4,11 @@
 }
 
 body {
-  position: relative;
-  overflow: hidden;
-
   &.modal-open {
+    position: fixed;
     height: 100vh;
-    overflow: hidden;
-    .page-inner {
-      height: 100vh;
-      overflow: hidden;
-    }
+    width: 100vw;
+    overflow-y: hidden;
   }
 }
 
